# whisper_bot

./: .gitignore  README.md  handlers.py  keyboard.py  main.py  pyproject.toml  ruff.toml  text.py
bot/: .gitignore  bot.py  text.py
